Fixed layout bug.

--- a/webapp/client/layouts/master_layout.css
+++ b/webapp/client/layouts/master_layout.css
@@ -22,7 +22,7 @@
   left:0;
   height:100%;
   width:100%;
-  z-index:50;
+  z-index:2000;
   background-color: rgba(0,0,0,0.5);
 }
 
@@ -31,7 +31,7 @@
 }
 
 #overlayPanel {
-    z-index:1002;
+    z-index:2002;
     -moz-opacity: 1.0;
     opacity:1.0;
     filter: alpha(opacity=100);
